# page-digest

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .pre-commit-config.yaml  README.md
backend/src/app/: main.py
backend/src/app/clients/llm/: __init__.py  digestor.py  llm.py  tone.py
backend/src/app/clients/screencapture/: processor.py
backend/src/app/common/: .env.sample  base_schema.py  config.py
backend/src/app/errors/: exceptions.py  handlers.py
backend/src/app/utils/: logger.py
backend/src/tests/: conftest.py
backend/src/tests/service/: test_page_digest.py
docker/: docker-compose.yml
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/lib/: webpack.chrome.config.js
frontend/lib/chrome/public/: manifest.json
frontend/lib/firefox/public/: manifest.json
frontend/lib/src/background/: fetch-sse.js  index.js
frontend/lib/src/content/: index.js
notebooks/: 1. experiment and scenario.ipynb
src/app/: main.py
src/app/clients/llm/: __init__.py  digestor.py  llm.py  prompts.py
src/app/clients/screencapture/: processor.py
src/app/common/: .env.sample  constant.py
src/app/databases/mysql/: conn.py
src/app/errors/: __init__.py
src/app/middlewares/: logging_middleware.py
src/app/modules/: api.py
src/app/modules/digest/: __init__.py  router.py  schema.py  service.py
src/app/modules/health/: router.py
src/app/utils/: __init__.py
src/tests/: .pytest.ini
src/tests/service/: test_page_digest.py
(+8 files in other folders)
